--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Description: Originally an R version of Preseq
   parametric and nonparametric methods, as described by Deng et
   al. (2018) <arXiv:1607.02804v3>.
 License: GPL-3
+Encoding: UTF-8
 URL: https://github.com/smithlabcode/preseqR
 BugReports: https://github.com/smithlabcode/preseqR/issues
 Imports:
