--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,3 +22,7 @@ URL: https://github.com/smithlabcode/preseqR
 BugReports: https://github.com/smithlabcode/preseqR/issues
 Imports:
   polynom, graphics, stats
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
